RESOLVED FIXED276387
REGRESSION (visionOS 2): Yahoo and AOL login pages flicker when adding a new Mail account
https://bugs.webkit.org/show_bug.cgi?id=276387
Summary REGRESSION (visionOS 2): Yahoo and AOL login pages flicker when adding a new ...
Wenson Hsieh
Reported 2024-07-09 13:49:42 PDT
Attachments
Wenson Hsieh
Comment 1 2024-07-09 15:04:22 PDT
EWS
Comment 2 2024-07-09 19:28:46 PDT
Committed 280802@main (c8c3aac34000): <https://commits.webkit.org/280802@main> Reviewed commits have been landed. Closing PR #30622 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.